Hieu sua giao dien, hoang sua pay va delete declare tax

--- a/thue2020/app/src/main/res/layout/activity_detail_declare_tax.xml
+++ b/thue2020/app/src/main/res/layout/activity_detail_declare_tax.xml
@@ -1,141 +1,222 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    tools:context=".DetailDeclareTax">
+    android:layout_height="match_parent"
+    android:background="#fff">
 
-    <TextView
-        android:id="@+id/tvDetailId"
+    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_weight="1"
-        android:text="id:"
-        android:textSize="22sp" />
+        android:orientation="vertical"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
+        tools:context=".DetailDeclareTax">
 
-    <TextView
-        android:id="@+id/tvDetailTaxPeriod"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_weight="1"
-        android:text="taxPeriod:"
-        android:textSize="22sp" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="Thông tin kê khai thuế"
+            android:textColor="#000"
+            android:textSize="24sp"
 
-    <TextView
-        android:id="@+id/tvDetailTimes"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_weight="1"
-        android:text="times:"
-        android:textSize="22sp" />
+            android:textStyle="bold">
 
-    <TextView
-        android:id="@+id/tvDetailFax"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_weight="1"
-        android:text="fax:"
-        android:textSize="22sp" />
+        </TextView>
 
-    <TextView
-        android:id="@+id/tvDetailTotalIncome"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_weight="1"
-        android:text="totalIncome:"
-        android:textSize="22sp" />
+        <TextView
+            android:id="@+id/tvDetailId"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_weight="1"
+            android:text="id:"
+            android:textSize="22sp" />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:text="Minus"
-        android:textSize="27sp"></TextView>
+        <TextView
+            android:id="@+id/tvDetailTaxPeriod"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_weight="1"
+            android:text="taxPeriod:"
+            android:textSize="22sp" />
 
-    <TextView
-        android:id="@+id/tvDetailYourSefl"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_weight="1"
-        android:text="YourSefl:"
-        android:textSize="22sp" />
+        <TextView
+            android:id="@+id/tvDetailTimes"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_weight="1"
+            android:text="times:"
+            android:textSize="22sp" />
 
-    <TextView
-        android:id="@+id/tvDetailDependentPerson"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_weight="1"
-        android:text="dependentPerson:"
-        android:textSize="22sp" />
+        <TextView
+            android:id="@+id/tvDetailFax"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_weight="1"
+            android:text="fax:"
+            android:textSize="22sp" />
 
-    <TextView
-        android:id="@+id/tvDetailCharity"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_weight="1"
-        android:text="Charity:"
-        android:textSize="22sp" />
+        <TextView
+            android:id="@+id/tvDetailTotalIncome"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_weight="1"
+            android:text="totalIncome:"
+            android:textSize="22sp" />
 
-    <TextView
-        android:id="@+id/tvDetailInsurrance"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_weight="1"
-        android:text="Insurrance:"
-        android:textSize="22sp" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:text="Minus"
+            android:textColor="#000"
+            android:textSize="22sp"
+            android:textStyle="bold"></TextView>
 
-    <TextView
-        android:id="@+id/tvDetailDateCreate"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_weight="1"
-        android:text="DateCreate:"
-        android:textSize="22sp" />
+        <TextView
+            android:id="@+id/tvDetailYourSefl"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_weight="1"
+            android:text="YourSefl:"
+            android:textSize="22sp" />
 
-    <TextView
-        android:id="@+id/tvDetailPaymentDate"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_weight="1"
-        android:text="PaymentDate:"
-        android:textSize="22sp" />
+        <TextView
+            android:id="@+id/tvDetailDependentPerson"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_weight="1"
+            android:text="DependentPerson:"
+            android:textSize="22sp" />
 
-    <TextView
-        android:id="@+id/tvDetailMoney"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_weight="1"
-        android:text="Money:"
-        android:textSize="22sp" />
+        <TextView
+            android:id="@+id/tvDetailCharity"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_weight="1"
+            android:text="Charity:"
+            android:textSize="22sp" />
 
-    <Button
-        android:id="@+id/btnDetailRemove"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_weight="1"
-        android:text="remove" />
+        <TextView
+            android:id="@+id/tvDetailInsurrance"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_weight="1"
+            android:text="Insurrance:"
+            android:textSize="22sp" />
 
-    <Button
-        android:id="@+id/btnDetailPay"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_weight="1"
-        android:text="pay" />
+        <TextView
 
-</LinearLayout>
+            android:id="@+id/tvDetailDateCreate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_weight="1"
+            android:text="DateCreate:"
+            android:textSize="22sp" />
+
+        <TextView
+            android:id="@+id/tvDetailPaymentDate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_weight="1"
+            android:text="PaymentDate:"
+            android:textSize="22sp" />
+
+        <TextView
+            android:id="@+id/tvDetailMoney"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_weight="1"
+            android:text="Money:"
+            android:textSize="22sp" />
+
+        <LinearLayout
+            android:layout_marginTop="30dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:background="#EBEBEB"
+                android:padding="1dp"
+                android:layout_weight="1">
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:id="@+id/btnDetailRemove"
+                    android:layout_centerInParent="true"
+
+                    android:background="#fff">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Xóa"
+                        android:layout_gravity="center"
+                        android:gravity="center"
+                        android:textStyle="bold"
+                        android:layout_centerInParent="true"
+                        android:textColor="#C51162"
+                        android:textSize="22sp">
+
+                    </TextView>
+
+                </RelativeLayout>
+            </RelativeLayout>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:background="#EBEBEB"
+                android:padding="1dp"
+                android:layout_weight="1">
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:id="@+id/btnDetailPay"
+                    android:layout_centerInParent="true"
+
+                    android:background="#fff">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Trả"
+                        android:layout_gravity="center"
+                        android:gravity="center"
+                        android:textStyle="bold"
+                        android:layout_centerInParent="true"
+                        android:textColor="#76FF03"
+                        android:textSize="22sp">
+
+                    </TextView>
+
+                </RelativeLayout>
+            </RelativeLayout>
+        </LinearLayout>
+
+    </LinearLayout>
+</androidx.core.widget.NestedScrollView>
