--- a/thue2020/app/src/main/res/layout/activity_declare_tax.xml
+++ b/thue2020/app/src/main/res/layout/activity_declare_tax.xml
@@ -5,30 +5,49 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:paddingLeft="15dp"
+    android:paddingRight="10dp"
     tools:context=".DeclareTaxActivity">
 
-    <LinearLayout
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="Điền đầy đủ thông tin"
+        android:textColor="#000"
+        android:textSize="19dp"
+
+        android:textStyle="bold">
+
+    </TextView>
+
+    <RelativeLayout
+        android:layout_marginTop="15dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="taxPeriod" />
+            android:paddingTop="13dp"
+            android:text="taxPeriod"
+
+            android:textSize="15dp" />
 
         <EditText
             android:id="@+id/etTaxPeriod"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:ems="10"
-            android:text="2020-2-1"
-            android:inputType="date" />
-    </LinearLayout>
+            android:layout_marginLeft="130dp"
 
-    <LinearLayout
+            android:ems="10"
+            android:inputType="date"
+            android:text="2020-2-1" />
+    </RelativeLayout>
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -36,158 +55,189 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="times" />
+            android:paddingTop="13dp"
+            android:text="times"
+            android:textSize="15dp" />
 
         <EditText
             android:id="@+id/etTimes"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_marginLeft="130dp"
             android:ems="10"
-            android:text="1"
-            android:inputType="number" />
-    </LinearLayout>
+            android:inputType="number"
+            android:text="1" />
+    </RelativeLayout>
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="fax" />
+            android:paddingTop="13dp"
+            android:text="fax"
+            android:textSize="15dp" />
 
         <EditText
             android:id="@+id/etFax"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:ems="10"
-            android:text="3432f4"
-            android:inputType="text" />
-    </LinearLayout>
+            android:layout_marginLeft="130dp"
 
-    <LinearLayout
+            android:ems="10"
+            android:inputType="text"
+            android:text="3432f4" />
+    </RelativeLayout>
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="totalIncome" />
+            android:paddingTop="13dp"
+            android:text="totalIncome"
+            android:textSize="15dp" />
 
         <EditText
             android:id="@+id/etTotalIncome"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_marginLeft="130dp"
+
             android:ems="10"
-            android:text="12000000"
-            android:inputType="number" />
-    </LinearLayout>
+            android:inputType="number"
+            android:text="12000000" />
+    </RelativeLayout>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Minus"
-        android:textSize="25dp"
-        ></TextView>
+        android:textColor="#000"
+        android:textSize="17dp"
+        android:textStyle="bold"></TextView>
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="YourSefl" />
+            android:paddingTop="13dp"
+            android:text="YourSefl"
+            android:textSize="15dp" />
 
         <EditText
             android:id="@+id/etYourSefl"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:ems="10"
-            android:text="9000000"
-            android:inputType="text" />
-    </LinearLayout>
+            android:layout_marginLeft="130dp"
 
-    <LinearLayout
+            android:ems="10"
+            android:inputType="text"
+            android:text="9000000" />
+    </RelativeLayout>
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="dependentPerson" />
+            android:paddingTop="13dp"
+            android:text="dependentPerson"
+            android:textSize="15dp" />
 
         <EditText
             android:id="@+id/etDependentPerson"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:ems="10"
-            android:text=""
-            android:inputType="number" />
-    </LinearLayout>
+            android:layout_marginLeft="130dp"
 
-    <LinearLayout
+            android:ems="10"
+            android:inputType="number"
+            android:text="" />
+    </RelativeLayout>
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Charity" />
+            android:paddingTop="13dp"
+            android:text="Charity"
+            android:textSize="15dp" />
 
         <EditText
             android:id="@+id/etCharity"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:ems="10"
-            android:text=""
-            android:inputType="number" />
-    </LinearLayout>
+            android:layout_marginLeft="130dp"
 
-    <LinearLayout
+            android:ems="10"
+            android:inputType="number"
+            android:text="" />
+    </RelativeLayout>
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Insurrance" />
+            android:paddingTop="13dp"
+            android:text="Insurrance"
+            android:textSize="15dp" />
 
         <EditText
             android:id="@+id/etInsurrance"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_marginLeft="130dp"
+
             android:ems="10"
-            android:text=""
-            android:inputType="number" />
-    </LinearLayout>
+            android:inputType="number"
+            android:text="" />
+    </RelativeLayout>
 
     <Button
         android:id="@+id/btnDeclareTaxNext"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
+        android:layout_marginLeft="20dp"
         android:layout_marginTop="30dp"
-        android:text="Next" />
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="15dp"
+        android:background="@drawable/bg_tt_dk"
+        android:text="Tiếp tục"
+        android:textAllCaps="false"
+        android:textColor="#fff"
+        android:textSize="17dp">
+
+    </Button>
 
     <TextView
         android:id="@+id/tvStatusDeclareTax"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
-        android:text="Status DeclareTax" />
+        android:text="Status DeclareTax"
+        android:textColor="#000"
+        android:textSize="15dp" />
 
 </LinearLayout>
