--- a/thue2020/app/src/main/res/layout/activity_main.xml
+++ b/thue2020/app/src/main/res/layout/activity_main.xml
@@ -1,79 +1,147 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="20dp"
-    android:orientation="vertical"
-    tools:context=".MainActivity"
-    >
+    android:background="#fff"
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp"
+    tools:context=".activity.LoginActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="86dp"
-            android:layout_height="match_parent"
-            android:text="MST" />
-
-        <EditText
-            android:id="@+id/etTaxcode"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text=""
-            android:layout_weight="1"
-            android:ems="10"
-            android:inputType="number" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="86dp"
-            android:layout_height="match_parent"
-            android:text="PASS" />
-
-        <EditText
-            android:id="@+id/etPassword"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text=""
-            android:layout_weight="1"
-            android:ems="10"
-            android:inputType="textPassword" />
-
-
-    </LinearLayout>
-
-    <Button
-        android:id="@+id/btnLogin"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="70dp"
-        android:text="login" />
 
     <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="150dp"
+        android:text="Đăng nhập"
+        android:textColor="#000"
+        android:textSize="35dp"
+        android:textStyle="bold">
+
+    </TextView>
+
+
+
+    <LinearLayout
+        android:id="@+id/ll_mst"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="240dp"
+        android:layout_marginRight="20dp"
+        android:background="@drawable/bg_ed"
+        android:orientation="horizontal"
+        android:paddingLeft="15dp">
+
+        <EditText
+
+            android:id="@+id/etTaxcode"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:background="@android:color/transparent"
+            android:hint="Mã số thuế"
+            android:imeOptions="actionNext"
+            android:inputType="number"
+            android:ems="10"
+
+            android:padding="4dp"></EditText>
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/ll_pass"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_below="@+id/ll_mst"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/bg_ed"
+        android:orientation="horizontal"
+        android:paddingLeft="15dp">
+
+        <EditText
+
+            android:id="@+id/etPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:background="@android:color/transparent"
+            android:hint="Mật khẩu"
+            android:imeOptions="actionNext"
+            android:inputType="textPassword"
+            android:ems="10"
+
+            android:padding="4dp"></EditText>
+    </LinearLayout>
+
+
+
+    <LinearLayout
+        android:id="@+id/btnLogin"
+        android:layout_width="140dp"
+        android:layout_height="60dp"
+        android:layout_below="@+id/ll_pass"
+        android:layout_alignParentEnd="true"
+        android:layout_gravity="center"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginRight="20dp"
+        android:background="@drawable/bg_btn">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="27dp"
+            android:text="Tiếp tục"
+            android:textColor="#fff"
+            android:textSize="21dp"
+            android:textStyle="bold"></TextView>
+
+
+
+    </LinearLayout>
+    <TextView
         android:id="@+id/tvStatus"
+        android:layout_below="@+id/btnLogin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:textSize="27dp"
         android:text="" />
-
-    <Button
-        android:id="@+id/btnSignUp"
-        android:layout_width="150dp"
-        android:layout_gravity="end"
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:text="sign up" />
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="10dp"
+        android:orientation="horizontal">
+        <TextView
 
-</LinearLayout>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Bạn đã có tài khoản?"
+            android:textColor="#717171"
+            android:textSize="16dp"
+            android:textStyle="bold">
+
+        </TextView>
+        <TextView
+            android:paddingTop="7dp"
+            android:paddingRight="7dp"
+            android:paddingBottom="7dp"
+            android:id="@+id/btnSignUp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Đăng ký"
+            android:textColor="#FFAB00"
+            android:textSize="16dp"
+            android:textStyle="bold"
+            android:layout_marginLeft="5dp">
+
+        </TextView>
+
+    </LinearLayout>
+</RelativeLayout>
