--- a/thue2020/app/src/main/res/layout/activity_menu.xml
+++ b/thue2020/app/src/main/res/layout/activity_menu.xml
@@ -13,21 +13,67 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:textSize="18dp"
+        android:textStyle="bold"
         android:text="không có gì để hiển thị">
     </TextView>
 
-    <Button
-        android:id="@+id/btnDeclareTax"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="khai thuế" />
 
-    <Button
-        android:id="@+id/btnListDeclareTax"
+    <LinearLayout
+        android:layout_marginTop="70dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="xem danh sách khai thuế" />
+        android:orientation="horizontal">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1">
+        <RelativeLayout
+            android:layout_width="120dp"
+            android:layout_height="100dp"
+            android:id="@+id/btnDeclareTax"
+            android:layout_centerInParent="true"
+            android:background="@drawable/bg_main">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Khai Thuế"
+                android:textStyle="bold"
+                android:layout_centerInParent="true"
+                android:textColor="#fff"
+                android:textSize="16dp">
+
+            </TextView>
+
+        </RelativeLayout>
+
+    </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1">
+        <LinearLayout
+            android:layout_width="120dp"
+            android:layout_height="100dp"
+            android:id="@+id/btnListDeclareTax"
+            android:layout_centerInParent="true"
+
+            android:background="@drawable/bg_main">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Danh sách khai thuế"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:textStyle="bold"
+                android:layout_centerInParent="true"
+                android:textColor="#fff"
+                android:textSize="16dp">
+
+            </TextView>
+
+        </LinearLayout>
+    </RelativeLayout>
+    </LinearLayout>
 
 </LinearLayout>
