--- a/thue2020/app/src/main/res/layout/activity_sign_up_people.xml
+++ b/thue2020/app/src/main/res/layout/activity_sign_up_people.xml
@@ -4,33 +4,46 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="15dp"
     android:orientation="vertical"
-    android:layout_margin="20dp"
     tools:context=".SignUpPeopleActivity">
-
-
-    <LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="idCard" />
+        android:layout_marginTop="20dp"
+        android:text="Điền đầy đủ thông tin"
+        android:textColor="#000"
+        android:textSize="19dp"
 
-    <EditText
-        android:id="@+id/etIdCard"
-        android:layout_width="wrap_content"
+        android:textStyle="bold">
+
+    </TextView>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:ems="10"
-        android:text="123"
-        android:inputType="number" />
-    </LinearLayout>
+        android:layout_marginTop="15dp"
+        android:orientation="horizontal">
 
-    <LinearLayout
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingTop="13dp"
+            android:text="idCard"
+            android:textSize="15dp" />
+
+        <EditText
+            android:id="@+id/etIdCard"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="100dp"
+            android:ems="10"
+            android:inputType="number"
+            android:text="123" />
+    </RelativeLayout>
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -38,111 +51,137 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="name" />
+            android:paddingTop="13dp"
+            android:text="name"
+            android:textSize="15dp" />
 
         <EditText
             android:id="@+id/etName"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:ems="10"
-            android:text="đường"
-            android:inputType="text" />
-    </LinearLayout>
+            android:layout_marginLeft="100dp"
 
-    <LinearLayout
+            android:ems="10"
+            android:inputType="text"
+            android:text="đường" />
+    </RelativeLayout>
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="dateOfBirth" />
+            android:paddingTop="13dp"
+            android:text="dateOfBirth"
+            android:textSize="15dp" />
 
         <EditText
             android:id="@+id/etDateOfBirth"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:ems="10"
-            android:text="1998-02-24"
-            android:inputType="date" />
-    </LinearLayout>
+            android:layout_marginLeft="100dp"
 
-    <LinearLayout
+            android:ems="10"
+            android:inputType="date"
+            android:text="1998-02-24" />
+    </RelativeLayout>
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="sex" />
+            android:paddingTop="13dp"
+            android:text="sex"
+            android:textSize="15dp" />
 
         <EditText
             android:id="@+id/etSex"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_marginLeft="100dp"
+
             android:ems="10"
             android:inputType="number" />
-    </LinearLayout>
+    </RelativeLayout>
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="address" />
+            android:paddingTop="13dp"
+            android:text="address"
+            android:textSize="15dp" />
 
         <EditText
             android:id="@+id/etAddress"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:ems="10"
-            android:text="Nghệ An"
-            android:inputType="text" />
-    </LinearLayout>
+            android:layout_marginLeft="100dp"
 
-    <LinearLayout
+            android:ems="10"
+            android:inputType="text"
+            android:text="Nghệ An" />
+    </RelativeLayout>
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="numberPhone" />
+            android:paddingTop="13dp"
+            android:text="numberPhone"
+            android:textSize="15dp" />
 
         <EditText
             android:id="@+id/etNumberPhone"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_marginLeft="100dp"
+
             android:ems="10"
-            android:text="0379278552"
-            android:inputType="number" />
-    </LinearLayout>
+            android:inputType="number"
+            android:text="0379278552" />
+    </RelativeLayout>
 
     <Button
         android:id="@+id/btnPeopleNext"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
+        android:layout_marginLeft="20dp"
         android:layout_marginTop="30dp"
-        android:text="Next" />
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="15dp"
+        android:background="@drawable/bg_tt_dk"
+        android:text="Tiếp tục"
+        android:textAllCaps="false"
+        android:textColor="#fff"
+        android:textSize="17dp">
+
+    </Button>
+
 
     <TextView
         android:id="@+id/tvStatusPeople"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
-        android:text="Status People" />
+        android:text="Status People"
+        android:textSize="15dp"
+        android:textStyle="bold" />
 
 
 </LinearLayout>
