--- a/thue2020/app/src/main/res/layout/list_item_layout.xml
+++ b/thue2020/app/src/main/res/layout/list_item_layout.xml
@@ -9,14 +9,16 @@
         android:id="@+id/tvTaxPeriodItem"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:textSize="24dp"
+        android:textSize="18sp"
+        android:textStyle="bold"
         android:text="taxPeriod:"></TextView>
 
     <TextView
         android:id="@+id/tvStatusDeclareTaxItem"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:textSize="24dp"
+        android:textSize="18sp"
+        android:textStyle="bold"
         android:text="status:"></TextView>
 
 </LinearLayout>
